--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Adedamola Olawale <olawaleade15@gmail.com>
+Joshua Adesanwo   <adesanwojoshua21@gmail.com>
